syntax = "proto3";

package ProjectOrigin.Register.LineProcessor.Tests.ExampleChat;

message ChatCreatedEvent {
    string topic = 1;
}

message MessagePostedEvent {
    string topic = 1;
    string message = 2;
}

message UnsupportedEvent {
    string topic = 1;
}
